--- a/src/locate_infomation/locateinformation.ui
+++ b/src/locate_infomation/locateinformation.ui
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>LocateInformation</class>
  <widget class="QDialog" name="LocateInformation">
@@ -5,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>434</width>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>GNSS定位信息</string>
   </property>
  </widget>
  <resources/>
