--- a/src/main_window/mainwindow.ui
+++ b/src/main_window/mainwindow.ui
@@ -350,108 +350,12 @@
    <widget class="QPlainTextEdit" name="logTxtBox">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>370</y>
-      <width>241</width>
-      <height>221</height>
+      <x>260</x>
+      <y>360</y>
+      <width>721</width>
+      <height>251</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QFrame" name="frame_2">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>410</y>
-      <width>491</width>
-      <height>201</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
-    </property>
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="geometry">
-      <rect>
-       <x>380</x>
-       <y>170</y>
-       <width>100</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>发送</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton">
-     <property name="geometry">
-      <rect>
-       <x>280</x>
-       <y>170</y>
-       <width>100</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>.AppleSystemUIFont</family>
-      </font>
-     </property>
-     <property name="text">
-      <string>清空(&amp;C)</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_3">
-     <property name="geometry">
-      <rect>
-       <x>390</x>
-       <y>150</y>
-       <width>101</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>添加换行符\n</string>
-     </property>
-    </widget>
-    <widget class="QPlainTextEdit" name="serialPortSendTextBox">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>471</width>
-       <height>131</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButton_3">
-     <property name="geometry">
-      <rect>
-       <x>280</x>
-       <y>150</y>
-       <width>81</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>发送Hex</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButton_4">
-     <property name="geometry">
-      <rect>
-       <x>180</x>
-       <y>150</y>
-       <width>99</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>发送文本</string>
-     </property>
-    </widget>
    </widget>
    <widget class="QFrame" name="frame_3">
     <property name="geometry">
@@ -471,8 +375,8 @@
     <widget class="QCheckBox" name="authScrollCheckBox">
      <property name="geometry">
       <rect>
-       <x>880</x>
-       <y>310</y>
+       <x>700</x>
+       <y>200</y>
        <width>81</width>
        <height>20</height>
       </rect>
@@ -480,57 +384,21 @@
      <property name="text">
       <string>自动滚动</string>
      </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
     </widget>
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QCheckBox" name="addTimePrefixcheckBox">
      <property name="geometry">
       <rect>
-       <x>440</x>
-       <y>310</y>
+       <x>610</x>
+       <y>200</y>
        <width>85</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>增加时间</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButton_2">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>310</y>
-       <width>81</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Hex显示</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButton">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>310</y>
-       <width>99</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>文本显示</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_2">
-     <property name="geometry">
-      <rect>
-       <x>540</x>
-       <y>310</y>
-       <width>85</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>增加换行</string>
      </property>
     </widget>
     <widget class="QPlainTextEdit" name="serialPortRecvTextBox">
@@ -573,7 +441,7 @@
      <property name="geometry">
       <rect>
        <x>850</x>
-       <y>240</y>
+       <y>190</y>
        <width>100</width>
        <height>32</height>
       </rect>
@@ -590,22 +458,22 @@
     <widget class="QLabel" name="recvBufferSizeLabel">
      <property name="geometry">
       <rect>
-       <x>770</x>
-       <y>250</y>
-       <width>81</width>
+       <x>790</x>
+       <y>200</y>
+       <width>61</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QPushButton" name="saveRecvToFileButton">
      <property name="geometry">
       <rect>
-       <x>850</x>
-       <y>270</y>
-       <width>100</width>
+       <x>819</x>
+       <y>300</y>
+       <width>131</width>
        <height>32</height>
       </rect>
      </property>
@@ -615,20 +483,36 @@
       </font>
      </property>
      <property name="text">
-      <string>保存文件</string>
+      <string>保存消息至文件</string>
      </property>
     </widget>
     <widget class="QCheckBox" name="configPanelCheckBox">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>280</y>
+       <y>310</y>
        <width>131</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
-      <string>显示定位信息图</string>
+      <string>GPS模块设置窗口</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="clearAfterSavedCheckBox">
+     <property name="geometry">
+      <rect>
+       <x>700</x>
+       <y>310</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>保存后清空消息</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
